# zsimd

./: CMakeLists.txt
include/: zsimd.hpp  zstring.hpp
include/zsimd/: duplicate_foreach.h  type_traits.hpp
include/zsimd/arch/: scalar.hpp
include/zsimd/arch/scalar/: arithmetic.inl  bitwise.inl  comparison.inl  data_transfer.inl  math.inl  per_slot.inl
include/zsimd/arch/scalar/pure/: arithmetic.inl  arithmetic_impl.inl  bitwise.inl  bitwise_impl.inl  comparison.inl  math.inl
include/zsimd/attrib/: align.h  current_arch.h  expand.h  flatten.h  target.h  target_clones.h
include/zsimd/impl/: basic_vector.hpp  scalar.hpp
include/zsimd/impl/scalar/: arithmetic.inl  bitwise.inl  comparison.inl  data_transfer.inl  math.inl  per_slot.inl
include/zsimd/impl/scalar/pure/: arithmetic.inl  arithmetic_impl.inl  bitwise.inl  bitwise_impl.inl  comparison.inl  math.inl
include/zsimd/types/: generic_vector.hpp  type_traits.hpp
include/zstring/: fn_traits.hpp  simd_fn.hpp
include/zstring/exam/: strchr.hpp  strcmp.hpp  strcoll.hpp  strcspn.hpp  strlen.hpp  strncmp.hpp  strpbrk.hpp  strrchr.hpp  strspn.hpp  strstr.hpp  strtok.hpp
include/zstring/manip/: strcat.hpp  strcpy.hpp  strncat.hpp  strncpy.hpp  strxfrm.hpp
include/zstring/mem/: mem_fn.hpp  memchr.hpp  memcmp.hpp  memcpy.hpp  memmove.hpp  memrchr.hpp  memset.hpp
